fixed game id does not exists bug